tests/error/member_from_static.gw
#! [contains] 
class C {
  var int i;
  fun static void test() {
    <<< i >>>;
  }
}
